# raven_ai

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  environment.yml  index.js  main.py  package.json  pyproject.toml  settings.py
api/: ai_agent.js
controllers/: home_controller.js  home_controller.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/controllers/: datamodel_controller.rst
docs/source/design/: datamodels.rst
http_routes/: routes.py
mcp_routes/: routes.py
models/: environment.py  environmentdata.py  experiment.py  experimentdata.py  material.py  materialdata.py  measurement.py  reduceddata.py  sample.py  sasentry.js  sassample.js
models/odm/: datamodel.py
routes/: ai_agent.js  routes.js
services/: ai_agent.js
src/: data_example.json  main.py  settings.py
src/controllers/: datamodel_controller.py  home_controller.py  sample_controller.py
src/http_routes/: routes.py
src/models/: environment.py  material.py  measurement.py  publication.py  sample.py
src/models/odm/: datamodel.py
