[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac_raven_ai"
version = "0.1.0"
description = "ISAAC web application with HTTP and MCP and DB"
readme = "README.md"
requires-python = ">=3.14"
license-files = ["LICENSE"]
dependencies = [
    "fastapi",
    "fastmcp",
    "uvicorn",
    "ravendb",
    "pyravendb"
]

[project.scripts]
start-app = "main:main" # Defines a command-line script named 'start-app'

[tool.setuptools.packages.find]
where = ["src"]
